--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .navLink {
+    @apply hover:text-green-700 active:text-green-700 text-center p-4 cursor-pointer
+    hover:font-bold capitalize hover:scale-105 transition-transform duration-200 ease-out;
+  }
+
+  .headerTitle {
+    @apply text-4xl font-serif capitalize px-10 pt-5 underline decoration-green-400
+    decoration-2 underline-offset-4 decoration-double;
+  }
+}
